--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body {
   text-align: right;
   margin-right: 2%;
   font-size: 120%;
+  cursor: pointer;
 }
 
 #logo{
@@ -148,6 +149,47 @@ a {
 .info {
     padding-top: 10px;
     margin-left: 625px;
+}
+
+#deliverycontainer{
+  display: inline-block;
+  width: 70%;
+  margin: 15%;
+  margin-top: 5%;
+  background-color: #E7E7E7;
+}
+
+.deliveryitem{
+  display: inline-block;
+  height: 80%;
+  margin-top: 2%;
+  padding-top: 2%;
+  margin-bottom: 2%;
+  padding-bottom: 2%;
+  background-color: #A1A1A1;
+  width: 100%;
+}
+
+.deliveryitem img{
+  width: 5%;
+  margin-left: 2%;
+  float: left;
+}
+
+.deliveryname{
+  margin-left: 2%;
+  font-size: 150%;
+  margin-top: 1.3%;
+  vertical-align: middle;
+  float: left;
+}
+
+.deliveryitem i{
+  float: right;
+  margin-top: 1.3%;
+  margin-right: 5%;
+  font-size: 150%;
+  cursor: pointer;
 }
 
 .myButton {
