--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,15 @@ body {
     color: white;
 }
 
+#mobiletopbar {
+    position: fixed;
+    background-color: black;
+    width: 100%;
+    height: 8vh;
+    top: 0;
+    z-index: 200;
+    visibility: hidden;
+}
 
 #nav {
     position: relative;
@@ -262,4 +271,77 @@ a {
 .myButton:active {
     position: relative;
     top: 1px;
+}
+
+@media only screen and (min-width: 600px){
+
+  /*change font-size margin-right*/
+  #account .accountelement{
+    color: white;
+    width: 4%;
+    float: right;
+    text-align: right;
+    margin-left: 10%;
+    margin-right: 5%;
+    font-size: 200%;
+    cursor: pointer;
+  }
+
+  /*change height*/
+  #logo2 {
+      position: fixed;
+      background-color: black;
+      width: 100%;
+      height: 8vh;
+      top: 0;
+      z-index: 200;
+      opacity: 0;
+      visibility: hidden;
+  }
+
+  /*change margin-top*/
+  #logoname2 {
+      text-align: center;
+      font-size: 300%;
+      color: white;
+      margin-top: 4%;
+  }
+
+  /*change height */
+  #logo{
+    position: relative;
+    background-color: black;
+    z-index: 100;
+    width: 50%;
+    height: 20vh;
+    margin-top: 12.5%;
+    margin-left: 25%;
+    border: 0.5vh solid white;
+    border-bottom: 0px;
+    display: table;
+  }
+
+  /*change visibility*/
+  #mobiletopbar {
+      position: fixed;
+      background-color: black;
+      width: 100%;
+      height: 4vh;
+      top: 0;
+      z-index: 200;
+      visibility: visible;
+  }
+
+  /*change height*/
+  #checkout{
+    display: inline-block;
+    width: 10%;
+    background-color: black;
+    height: 2vh;
+    float: right;
+    margin-right: 15%;
+    margin-bottom: 10%;
+    border: 5px solid white;
+    cursor: pointer;
+  }
 }
